finish main layout for large screens

--- a/index.html
+++ b/index.html
@@ -2,41 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Frontend Mentor | Four card feature section</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
+	<header class="container">
+		<div class="row justify-content-center">
+			<div class="col-xl-7 p-5">
+				<h2 class="text-center thin">Reliable, efficient delivery</h2>
+				<h2 class="text-center bold">Powered by Technology</h2>
+				<p class="text-center grey">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+			</div>
+		</div>
+  </header>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-xl-4 p-5">
+        <div class="card card-cyan box-shadow" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title bold">Supervisor</h5>
+            <p class="card-text grey">Monitors activity to identify project roadblocks</p>
+            <img src="images/icon-supervisor.svg" alt="magnifying glasses symbol" class="icon">
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 p-5">
+        <div class="card card-red box-shadow" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title bold">Team Builder</h5>
+            <p class="card-text grey">Scans our talent network to create the optimal team for your project</p>
+            <img src="images/icon-team-builder.svg" alt="house symbol" class="icon">
+          </div>
+        </div>
+        <div class="card mt-5 card-orange box-shadow" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title bold">Karma</h5>
+            <p class="card-text grey">Regularly evaluates our talent to ensure quality</p>
+            <img src="images/icon-karma.svg" alt="light symbol" class="icon">
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 p-5">
+        <div class="card card-blue box-shadow" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title bold">Calculator</h5>
+            <p class="card-text grey">Uses data from past projects to provide better delivery estimates</p>
+            <img src="images/icon-calculator.svg" alt="calculator symbol" class="icon">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="pl-5">
+    <p class="attribution text-center thin">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/vieiramanda11/">Amanda Vieira</a>.
     </p>
