--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		</div>
   </header>
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-xl-4 p-5">
+    <div class="row align-items-center main-row">
+      <div class="col-lg-4 p-5 col-md-6 col-superviser">
         <div class="card card-cyan box-shadow" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title bold">Supervisor</h5>
@@ -34,7 +34,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-4 p-5">
+      <div class="col-lg-4 p-5 col-md-6 col-duplicate">
         <div class="card card-red box-shadow" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title bold">Team Builder</h5>
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-4 p-5">
+      <div class="col-lg-4 col-md-6 p-5 col-calculator">
         <div class="card card-blue box-shadow" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title bold">Calculator</h5>
